--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
+# spring.datasource.username=root 
+# spring.datasource.password=ngodinhdat12345
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# #spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root 
 spring.datasource.password=ngodinhdat12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=true
