--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,9 @@ spring.datasource.username=root
 spring.datasource.password=ngodinhdat12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# # #config spring security
+# spring.security.user.name= users 
+spring.security.user.password=123456
 #spring.jpa.show-sql=true
+
+    
